[tool.poetry]
name = "best-test-request"
version = "0.1.0"
description = "Figuring out the most efficient way to send requests to test web servers"
authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
subtask = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.31.0"
types-requests = "^2.31.0.1"
mypy = "^1.3.0"
subtask = "^1.0.0"
colorama = "^0.4.6"
types-colorama = "^0.4.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
